--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "on-change": "^4.0.2"
   }
 }
